# django-htmx-autocomplete

./: .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_formatting.txt  setup.cfg  setup.py
.github/workflows/: release-please.yml  tests.yaml
autocomplete/: __init__.py  apps.py  autocomplete.py  core.py  shortcuts.py  test_autocomplete.py  views.py  widgets.py
autocomplete/locale/en/LC_MESSAGES/: django.po
autocomplete/locale/fr/LC_MESSAGES/: django.po
autocomplete/static/autocomplete/css/: autocomplete.css
autocomplete/static/autocomplete/js/: autocomplete.js
autocomplete/templates/autocomplete/: ac_container.html  chip.html  chip_list.html  component.html  head.html  indicator-icon.html  item.html  item_list.html  scripts.html  textinput.html  values.html
autocomplete/templates/autocomplete/strings/: available_results.html  backspace_instruction.html  item_selected.html  more_results.html  multiselect.html  no_results.html  nothing_selected.html  selected.html
autocomplete/templatetags/: __init__.py  autocomplete.py
sample_app/: ac_controls.py  asgi.py  dev_script.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
sample_app/migrations/: 0001_initial.py
sample_app/templates/: _generic_form.html  base.html  dynamic_formset_example.html  edit_team.html  index.html  static_formset_example.html
tests/: conftest.py  pytest_test_runner.py  test_auth_check.py  test_autocomplete.py  test_form_render.py  test_items.py  test_model_ac.py  test_new_items.py  test_new_toggle.py  test_new_widget_render.py  test_sample_app_views.py  test_toggle.py  test_widget_render.py  utils_for_test.py
tests/app/: manage.py
tests/app/ac_test/: ac_controls.py  apps.py  forms.py  models.py  views.py
tests/app/ac_test/migrations/: 0001_initial.py
tests/app/ac_test/templates/: index.html
tests/app/app/: asgi.py  settings.py  urls.py  wsgi.py
tests/selenium/: conftest.py  selenium_util.py  test_live_widget.py
