[metadata]
name = django-htmx-autocomplete
version = 0.6.0
description = A Django autocomplete component powered by htmx
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PHACDataHub/django-htmx-autocomplete
author = Luc Belliveau
author_email = luc.belliveau@canada.ca
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.1
setup_requires =
    Django >= 4.1
