[metadata]
name = django-htmx-autocomplete
version = 1.0.15
description = A Django autocomplete component powered by htmx
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PHACDataHub/django-htmx-autocomplete
author = Luc Belliveau
author_email = luc.belliveau@canada.ca
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    Django >= 5.1
setup_requires =
    Django >= 5.1
