# This file is intentionally mostly empty.
# All package metadata and configuration has been moved to pyproject.toml
# as per modern Python packaging standards (PEP 517/518/621).
#
# The setup.py file is kept for custom build commands (compile_translations)
# that are not yet fully supported in pyproject.toml.

[options.packages.find]
exclude =
    tests
    tests.*
    sample_app
    sample_app.*
